Fixed the "flicker" dropbox

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,11 @@ html, body {
   }
   body {
     display: flex;
+    min-height: 100vh;
     flex-direction: column;
   }
 .wrapper{
-    flex: 1 0 auto;
+    flex: 1;
     text-align: left;
     position: relative;
   }
@@ -14,10 +15,10 @@ html, body {
 .wrapper{
     background: linear-gradient(
         to bottom, 
-        #287bf8 0%, 
-        #287bf8 35%, 
-        white 35%, 
-        white 100%
+        #287bf8 0px, 
+        #287bf8 200px, 
+        white 200px, 
+        white 800px
       );
 }
 
@@ -64,7 +65,7 @@ h1, h5, p{
 /* Links inside the dropdown */
 .dropdown-content a {
     color: white;
-    padding: 12px 16px;
+    padding: 12px;
     text-decoration: none;
     display: block;
 }
@@ -99,7 +100,7 @@ h1, h5, p{
     z-index: 1;
 } */
 
-.content-picture{
+.container-picture{
     display:flex;
     align-items:center;
     justify-content:center;
@@ -109,37 +110,32 @@ h1, h5, p{
     max-width: 80%;
     margin-bottom: 10px;
 }
-
-
-/* FOOTER */
-/* ---------------------------------------------- */
-#footer{
-    background-color: #287bf8;
-    flex-shrink: 0;
-}
-.social-icon{
-    width: 20px;
-    height: 20px;
-}
-
-.footer-text{
-    margin: 5px;
-}
-
-.footer-center{
-    text-align: center;
-}
-.content-information{
+.container-information{
     width: 80%;
     margin: 0 auto;
     text-align: left;
 }
-.content-links{
+.container-links{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
 
+/* FOOTER */
+/* ---------------------------------------------- */
+#footer{
+    background-color: #287bf8;
+}
+.social-icon{
+    width: 20px;
+    height: 20px;
+}
+.footer-text{
+    margin: 5px;
+}
+.footer-center{
+    text-align: center;
+}
 .links-button{
     list-style-type: none;
     width: 100%;
